<resources>
    <string name="app_name">SeNov</string>
    <string name="all_books">Semua Buku</string>
    <string name="profile_image">profile image</string>
    <string name="category">Genre Buku</string>
    <string name="_19_99">$19.99</string>
    <string name="_12_99">$12.99</string>
    <string name="buy_now">Buy Now</string>
    <string name="nov24">Nov 2024</string>
    <string name="load_data">Memuat data...</string>
    <string name="senov">Seputar Novel</string>
    <string name="search_global">Search</string>
    <string name="search">Cari judul buku</string>
    <string name="popular">Popular</string>
    <string name="home">Home</string>
    <string name="books">Books</string>
    <string name="bookmark">Bookmark</string>
    <string name="your_book">Your Book</string>
    <string name="audio">Audio</string>
    <string name="profile">Profile</string>
    <string name="go_to_detail">Detail Book</string>
    <string name="email">Ramadhanioktapinian@gmail.com</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="back">Back</string>
    <string name="grid">Grid</string>
    <string name="listen_now">Listen Now</string>
    <string name="synopsis">Synopsis</string>
    <string name="description_book">Bulan adalah sebuah cerita tentang seorang gadis bernama Binar yang menjalani perjalanan hidup penuh tantangan. Dengan latar belakang keluarga yang sederhana, Binar memiliki mimpi besar untuk menjadi seseorang yang dapat diandalkan dan memiliki makna dalam hidupnya. Sepanjang perjalanan, ia menemukan arti persahabatan sejati, menghadapi konflik batin, dan menjalani berbagai pengalaman yang mengajarkannya untuk menjadi lebih kuat. Bulan adalah kisah inspiratif tentang ketekunan, persahabatan, dan menemukan jati diri di tengah kesulitan hidup.</string>
    <string name="read_now">read now</string>
    <string name="nomor">+62 812 1063 2253</string>
    <string name="nomor_chapter">Nomor Chapter</string>
    <string name="address">Bandung, Indonesia</string>
    <string name="date">Created November 2024</string>
    <string name="oktapiani_r">Oktapiani R.</string>
    <string name="ramdhanioktapiani_gmail_com">ramdhanioktapiani@gmail.com</string>
    <string name="genre">Fantasi Petulangan</string>
    <string name="find_your_next_favorite_book">Temukan Buku Terbaru Anda</string>
    <string name="search_books_authors_genres">Cari berdasarkan judul atau kategori...</string>
    <string name="popular_search">Pencarian Terbanyak</string>
    <string name="discover">Discover</string>
    <string name="karya">Karya</string>
    <string name="read">Read Now - %1$s</string>
    <string name="phone_number">Nomor Telepon</string>
    <string name="develop_address">Alamat</string>
    <string name="joining_date">Tanggal Bergabung</string>
    <string name="top_authors_search">Top Authors Search</string>
    <string name="top_book_search">Top Book Search</string>
    <string name="exp_number">0</string>
    <string name="exp_number_grafik_year">2025</string>
    <string name="exp_number_grafik_another_year">2024</string>
    <string name="exp_timestamp_full">27 March 2025 at 17:33:32 UTC+7</string>
    <string name="exp_status">Status:</string>
    <string name="exp_name_full">Jhon</string>
    <string name="exp_email_full">Jhon@gmail.com</string>
    <string name="exp_description_full">Cerita Kosong</string>
    <string name="exp_id">Id: </string>
    <string name="exp_id_full">6awY7KTmVV2C2c5NDdNR</string>
    <string name="exp_category_full">14</string>
    <string name="exp_read_book">"Dibaca: 10 kali</string>
    <string name="exp_book_syn">Sebuah kisah cinta yang menyentuh hati tentang kenangan, kehilangan, dan harapan.</string>
    <string name="recent">Pencarian</string>
    <string name="notif">Notifikasi</string>
    <string name="filter">Filter</string>
    <string name="content">Isi Chapter</string>
    <string name="search_chapter">Search Chapters</string>
    <string name="see_all">Lihat Semua</string>
    <string name="account_forgot_pass">Lupa Kata Sandi?</string>
    <string name="account_google_sign_in">Atau Login dengan</string>
    <string name="category_laporan">Kategori</string>
    <string name="recent_search">Recent Search</string>
    <string name="close_button">Close</string>
    <string name="clear_all">Clear All</string>
    <string name="trending_now">Trending Now</string>
    <string name="all">All</string>
    <string name="analytics_overview">Analytics Overview</string>
    <string name="weekly">Minggu</string>
    <string name="monthly">Bulan</string>
    <string name="yearly">Tahun</string>
    <string name="user_activity">Grafik Seputar Novel</string>
    <string name="app_usage_metrics">berikut data grafik berdasarkan…</string>
    <string name="content_distribution">Content Distribution</string>
    <string name="top_categories_and_books">Top Categories and Books </string>
    <string name="fiction">Fiksi</string>
    <string name="fantacy">Fantasi</string>
    <string name="adventure">Petualangan</string>
    <string name="category_romance">Romantis</string>
    <string name="category_mistery">Misteri</string>
    <string name="category_adventure">Adventure</string>
    <string name="rating">0.0</string>
    <string name="api_key">8b71325fbf3a43d8a949fd23ce4e2f5a</string>
    <string name="point">•</string>
    <string name="welcome">Selamat Datang!</string>
    <string name="mail">Alamat Email</string>
    <string name="password">Password</string>
    <string name="sentence">Silahkan masuk ke akun Anda</string>
    <string name="account">Belum punya akun?</string>
    <string name="list">Daftar</string>
    <string name="guest">Guest</string>
    <string name="opener">Silakan login terlebih dahulu</string>
    <string name="strip">-</string>
    <string name="saving">Menyimpan...</string>
    <string name="logout">Logout</string>
    <string name="google">login_with_google</string>
    <string name="default_web_client_id">1029032182629-5ue6c7lv3lre448s4fcndb7strug9mco.apps.googleusercontent.com</string>
    <string name="dashboard_admin">Dashboard Admin</string>
    <string name="your_book_nav">Your Book</string>
    <string name="rating_book">4</string>
    <string name="choose_file">Pilih Foto</string>
    <string name="save">Simpan</string>
    <string name="highest_rating">Rating Tertinggi - Terendah</string>
    <string name="lowest_rating">Rating Terendah - Tertinggi</string>
    <string name="apply">Terapkan</string>
    <string name="sort">Sort: Semua</string>
    <string name="book_title">Book Title</string>
    <string name="book_author">Book Author</string>
    <string name="book_total">Total Buku</string>
    <string name="book_collection">Book Collection</string>
    <string name="book_cover">Cover Buku</string>
    <string name="book_information">Book Information</string>
    <string name="book_chapter_information">Book Chapter Information</string>
    <string name="book_enter_title">Enter Book Title</string>
    <string name="book_description">Book Description</string>
    <string name="book_enter_description">Enter Book Description</string>
    <string name="book_content">Book Content</string>
    <string name="book_enter_author">Enter Author Book</string>
    <string name="book_enter_content">Enter Book Content</string>
    <string name="book_enter_category">Enter Book Category</string>
    <string name="book_enter_id">Enter Book ID</string>
    <string name="book_enter_nomor_chapter">Enter Nomor Chapter</string>
    <string name="book_enter_title_chapter">Enter Judul Chapter</string>
    <string name="book_enter_chapter">Enter Book Chapter</string>
    <string name="book_chapters">2 chapter</string>
    <string name="book_id">Book ID</string>
    <string name="book_content_id">Book Content ID</string>
    <string name="book_list_title">Data Buku</string>
    <string name="book_search">Cari Buku</string>
    <string name="book_empty">Tidak ada data buku</string>
    <string name="book_empty_desc">Coba cari buku yang lain</string>
    <string name="book_content_list_title">Data Isi Cerita</string>
    <string name="book_title_exp">Harry Potter dan Tawanan Azkaban</string>
    <string name="book_description_title">Deskripsi Buku</string>
    <string name="book_top">Top Books</string>
    <string name="title_feature_add_author">Tambah Author</string>
    <string name="title_feature_add_content_book">Tambah Cerita</string>
    <string name="title_MA_admin">Pengelolaan Fitur</string>
    <string name="title_feature_add_book">Tambah Buku Baru</string>
    <string name="title_feature_add_book_content">Tambah Chapter Buku</string>
    <string name="title_support_section">Pusat Bantuan</string>
    <string name="title_download_pdf">Download</string>
    <string name="title_sort">Urutkan berdasarkan Rating</string>
    <string name="title_laporan_sorting">Urutkan berdasarkan:</string>
    <string name="title_chapter">Judul Chapter</string>
    <string name="title_grafik">Statistik</string>
    <string name="title_avarage_grafik">Rata-rata Buku Dibaca</string>
    <string name="title_motnly_avarage">Rata-rata Pembaca Bulanan</string>
    <string name="title_daily_avarage">Rata-rata pembaca harian</string>
    <string name="title_edit_chapter">Edit Chapter</string>
    <string name="title_chapter_content">Isi Cerita</string>
    <string name="title_edit_book">Edit Data Buku</string>
    <string name="title_book">Judul Buku</string>
    <string name="title_admin_rating">Data Rating Buku</string>
    <string name="title_rating">Penilaian Buku</string>
    <string name="title_category">Category: </string>
    <string name="title_description">Description: </string>
    <string name="title_email">Email: </string>
    <string name="title_name">Name: </string>
    <string name="title_timestamp">Timestamp: </string>
    <string name="title_action_bantuan">Data Bantuan Pengguna</string>
    <string name="title_request_details">Informasi Bantuan</string>
    <string name="title_laporan">Laporan Data Buku</string>
    <string name="title_content_sorting_laporan">Pilih urutan</string>
    <string name="title_laporan_admin">Laporan</string>
    <string name="add_content">Tambah isi cerita</string>
    <string name="add_rating">Tambah Penilaian buku</string>
    <string name="add_rating_wording">Berikan Rating:</string>
    <string name="add_rating_number">0.0/5.0</string>
    <string name="add_rating_ulasan">Tulis Ulasan</string>
    <string name="add_rating_recommend_section">Saya merekomendasikan buku ini</string>
    <string name="add_rating_submit">Kirim Penilaian</string>
    <string name="name_add_author">Nama Author</string>
    <string name="name_book1">Siputih</string>
    <string name="name_develop">Oktapiani</string>
    <string name="name_book">Bulan</string>
    <string name="name_book_to">Karya</string>
    <string name="name_full">Nama Lengkap</string>
    <string name="author_bio">Biography</string>
    <string name="author_social_media">Social Media</string>
    <string name="author_foto">Author Photo</string>
    <string name="author_info">Author Informasi</string>
    <string name="author_total">Total Authors</string>
    <string name="author_label">Author</string>
    <string name="author_example_social_media">\@jk_rowling</string>
    <string name="author_id">Author ID</string>
    <string name="author_enter_id">Enter Author ID</string>
    <string name="author_biography">J.K. Rowling (Joanne Rowling) adalah seorang penulis asal Inggris yang dikenal sebagai pencipta seri Harry Potter. Ia lahir pada 31 Juli 1965 di Yate, Gloucestershire, Inggris.Rowling mengembangkan ide Harry Potter saat dalam perjalanan kereta api dari Manchester ke London pada tahun 1990. Setelah menghadapi berbagai penolakan dari penerbit, novel pertamanya, Harry Potter and the Philosopher’s Stone, akhirnya diterbitkan pada tahun 1997 oleh Bloomsbury.</string>
    <string name="author">J.K Rowling</string>
</resources>