<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:radius="8dp"
    app:cardBackgroundColor="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp">

        <ImageView
            android:id="@+id/book_cover"
            android:layout_width="80dp"
            android:layout_height="120dp"
            android:src="@drawable/img_book_cover1"
            android:layout_marginEnd="12dp"
            android:scaleType="centerCrop"
            android:contentDescription="@string/book_cover" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">

            <TextView
                android:id="@+id/book_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/name_book"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/book_genre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/genre"
                android:textSize="14sp"
                android:textColor="@color/grey" />

            <!-- Rating Buku -->
            <TextView
                android:id="@+id/book_rating"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rating"
                android:textSize="14sp"
                android:textColor="@color/grey" />

            <!-- Harga Buku -->
            <TextView
                android:id="@+id/book_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/_12_99"
                android:textSize="14sp"
                android:textColor="@color/black" />
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>
