<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:padding="16dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#FFFFFF"
    android:layout_margin="12dp"
    android:elevation="4dp"
    android:gravity="center_vertical">

    <!-- Gambar Cover -->
    <ImageView
        android:id="@+id/imgCover"
        android:layout_width="100dp"
        android:layout_height="140dp"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_book"
        android:layout_marginEnd="16dp" />

    <!-- Info Buku -->
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <TextView
            android:id="@+id/tvJudul"
            android:text="@string/book_title_exp"
            android:textStyle="bold"
            android:textSize="18sp"
            android:textColor="#212121"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tvPenulis"
            android:text="@string/author"
            android:textSize="14sp"
            android:textColor="#616161"
            android:layout_marginTop="4dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tvCategory"
            android:text="@string/category_adventure"
            android:textSize="12sp"
            android:textColor="#757575"
            android:layout_marginTop="2dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tvTotalBaca"
            android:text="@string/exp_read_book"
            android:textSize="12sp"
            android:textColor="#757575"
            android:layout_marginTop="2dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tvDeskripsi"
            android:text="@string/exp_book_syn"
            android:textSize="13sp"
            android:textColor="#424242"
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="3"
            android:ellipsize="end" />
    </LinearLayout>
</LinearLayout>
