<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <TextView
        android:id="@+id/textViewFilterTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_sort"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <RadioGroup
        android:id="@+id/radioGroupSort"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/textViewFilterTitle">

        <RadioButton
            android:id="@+id/radioHighestRating"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/highest_rating"
            android:textSize="16sp"
            android:padding="8dp"/>

        <RadioButton
            android:id="@+id/radioLowestRating"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lowest_rating"
            android:textSize="16sp"
            android:padding="8dp"/>
    </RadioGroup>

    <Button
        android:id="@+id/btnApplyFilter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/apply"
        android:backgroundTint="@color/accent"
        app:layout_constraintTop_toBottomOf="@id/radioGroupSort"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>